<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_colors">

    <!-- Toolbar/powrot -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/addTaskToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/newTaskButton_background"

        app:title="Add New Task"
        app:titleTextColor="@android:color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/task_title"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <!--Obszar na tekst (zadanie)-->
    <EditText
        android:id="@+id/editTextTask"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:autofillHints="no"
        android:background="@drawable/background_round_corners"
        android:hint="@string/task_title_hint"
        android:inputType="textMultiLine"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="15dp"
        android:paddingBottom="5dp" />

    <!--Kategoria+ikony-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/category_name"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="25dp" />


    <!-- Poziomy widok "scroll" dla zestawu ikon -->
        <HorizontalScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="20dp"
            android:scrollbars="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
            <!--Ikony-->
                <ImageView
                    android:id="@+id/phone"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginEnd="10dp"
                    android:clickable="true"
                    android:contentDescription="@string/phone_description"
                    android:focusable="true"
                    android:padding="2dp"
                    android:src="@drawable/ic_phone" />

                <ImageView
                    android:id="@+id/favorite"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/favorite_description"
                    android:padding="2dp"
                    android:src="@drawable/ic_favorite" />

                <ImageView
                    android:id="@+id/home"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/home_description"
                    android:padding="2dp"
                    android:src="@drawable/ic_home" />

                <ImageView
                    android:id="@+id/person"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/person_description"
                    android:padding="2dp"
                    android:src="@drawable/ic_person" />

                <ImageView
                    android:id="@+id/pets"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/pets_description"
                    android:padding="2dp"
                    android:src="@drawable/ic_pets" />

                <ImageView
                    android:id="@+id/school"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/school_description"
                    android:padding="2dp"
                    android:src="@drawable/ic_school" />

                <ImageView
                    android:id="@+id/work"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/work_description"
                    android:padding="2dp"
                    android:src="@drawable/ic_work" />
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>
    <!-- Date + Time -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:baselineAligned="true"
        android:orientation="horizontal">
        <!-- Data -->
        <LinearLayout
            android:id="@+id/dateClick"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/date_button"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/background_round_corners">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/calendar_description"
                    android:src="@drawable/ic_calendar" />
            </FrameLayout>
        </LinearLayout>

        <!-- Time -->
        <LinearLayout
            android:id="@+id/timeClick"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/timeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/time_button"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/background_round_corners">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/clock_description"
                    android:src="@drawable/ic_clock" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

    <!-- Obszar notatek -->


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/notes_title"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editTextNotes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:inputType="textMultiLine"
        android:background="@drawable/background_round_corners"
        android:hint="@string/notes_hint"
        android:autofillHints="no"
        android:gravity="top"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"/>

    <!-- Przycisk "Save" -->
    <Button
        android:id="@+id/saveButton"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/newTaskButton_background"
        android:text="@string/save_Button"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>


