<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/background_colors">

    <!-- Aktualna data -->
    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="monospace"
        android:text="@string/textview_date"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- Tekst "To Do List" -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:fontFamily="casual"
        android:text="@string/todo_list_title"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold" />

    <!-- Przewijalna lista z utworzonymi zadaniami -->
    <!-- Lista zadan to-do -->
    <ListView
        android:id="@+id/toDoList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/background_round_corners"
        android:contentDescription="@string/contentDescr"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">
    </ListView>

    <!-- Przycisk "Add New Task" -->
    <Button
        android:id="@+id/newTaskButton"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/newTaskButton_background"
        android:text="@string/addNewTaskButton"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>